chat overflow scrolling fixed

--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -3,6 +3,11 @@
     height: 49px !important;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .sidebar__chat {
     padding-right: 15px;
     background-color: white;
